--- a/styles/style.css
+++ b/styles/style.css
@@ -7,24 +7,42 @@ body {
     background-color: #f3f1ff;
 }
 
+hr {
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
+
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
     background-color: #ffffff;
     width: 870px;
     padding: 20px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
 /* top player style */
-.section-title {}
+.section-title {
+    color: #562EEF;
+    font-size: 18px;
+    margin-top: 3px;
+
+}
+
+.top-player {
+    margin-bottom: 30px;
+}
 
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-row-gap: 30px;
 }
 
 .player {
@@ -39,4 +57,134 @@ main {
 
 .player-name {
     margin-left: 16px;
+}
+
+/*--------- Top blogs style -----------*/
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 26px;
+}
+
+.blog .thumnail img {
+    width: 117px;
+    height: 117px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+
+.blog-title {
+    font-size: 20px;
+}
+
+.blog-author {
+    font-size: 16px;
+    color: 9F9F9F;
+}
+
+.blog-author a {
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EEF;
+}
+
+/*---------- courses style --------------*/
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course .course-banner img {
+    width: 244px;
+    height: 104px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.field {
+    color: #FFC014;
+}
+
+.fa-star.empty {
+    color: AEAEAE;
+}
+
+.course-duration {
+    font-size: 14px;
+    color: black;
+    border-radius: 10px;
+    background-color: whitesmoke;
+
+}
+
+.fa-regular {
+    margin-right: 5px;
+}
+
+/* Media quiries */
+
+@media only screen and (max-width:688px) {
+    .container {
+        width: 100%
+    }
+
+    .players,
+    .blogs,
+    .courses {
+
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    .player,
+    .blogs,
+    .courses {
+        flex-direction: column;
+    }
+
+    .section-title {
+        text-align: center;
+        font-size: 12px;
+    }
+}
+
+/* Tablet devices */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container {
+        width: 100%
+    }
+
+    .players,
+    .blogs,
+    courses {
+
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    .player,
+    .blogs,
+    .courses {
+        flex-direction: column;
+    }
+
+    .section-title {
+        text-align: center;
+        font-size: 12px;
+    }
 }
